--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 
 /*---------------------------------VARIABLES--------------------------------*/
 :ROOT{
-    --color-fonte-menu: rgba(10, 117, 218, 0.548);
+    --color-fonte-menu: rgba(10, 117, 218, 0.815);
     --color-fonte: rgba(39, 30, 25, 0.815);
-    --cyan-light: #38fa79b6;
+    --cyan-light: #08ff5a;
     --pink-light: #38cefcd2;
     --green-yellow: rgb(94, 139, 20);
     --white-alpha-40: rgba(231, 228, 227, 0.336);
@@ -73,34 +73,31 @@ section{ /* Quadrado central */
 /*-------------------Corpo Central--------------------------*/
 /*--------Barra de menus-------------*/
 .header{
-    /*background-color: red;*/
-    width: 100%;
+   /* background-color: red;*/
+    max-width: 100%;
+    height: 130px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
+    flex-wrap: wrap;
+    order: 1 ;
+    
         
 }
-.logo{
-    width: 50px;
-    margin-top: 20px;    
-    margin-left: 20px;  
-    
-}
-.nav-links{
-    /*background-color: aqua;*/
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    height: 300px;
-    margin-right: 85px;
-    margin-bottom: -243px;
-    margin-top: 60px;
-    padding-left: 86px;
-}
 
+.nav-links{
+    /*background-color: rgb(0, 255, 136);*/
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    flex-wrap: wrap;
+    margin-right: 50px;
+    
+    
+
+}
 .nav-links, li{
-   
-    padding: 0px 10px;
+    padding: 0px 20px;
     
 }
 .nav-links li a {
@@ -125,14 +122,14 @@ li {
 /*-corpo central--*/
 
 .corpo-central{
-    /*background-color: green;*/
+   /* background-color: green;*/
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: 'Poppins' ;
 }
 .img-box{
-    border: 1px solid var(--color-border);
+    border: 1px solid var(--color-fonte-menu);
     border-radius: 50%;
     
 }
@@ -162,11 +159,11 @@ img{
 }
 /*--------------------------------testo-------------------------------*/
 .texto{
-    /*background-color: blue;*/
-    width: 500px;
+ /*   background-color: blue;*/
+    width: 800px;
     height: 400px;
-    margin-top: 0px;
-    margin-left: 10px;
+    padding:0 10px 10px 80px;
+    
 }
 h1, h3{
     color: var(--color-fonte);
@@ -191,9 +188,21 @@ p{
     
 }
 
+/*------------------------ menu sobre mim -----------------------*/
+.sobreMim{
+    
+    max-width: 100%;
+    height: 700px;
+    padding: 20px 80px 40px 80px;
+    font-family: 'Poppins' ;
+    margin-top: 30px;
+}
 
-/*----------------menu projeto---------------------*/
-
+.titulo{
+    color: var(--color-fonte-menu);
+}
+/*------------------------ Final menu sobre mim -----------------------*/
+/*------------------------ menu projeto -----------------------*/
 .projetos{
 
     margin: 50px 10px 10px 10px;
@@ -202,8 +211,6 @@ p{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-
-
 }
 
 .barberShop, .curriculo, 
@@ -220,9 +227,14 @@ p{
  
 }
 .img-projetos{
+    background-color: rgb(7, 7, 7);
     width: 100px;
     height: 150px;
-    margin: 10px;
+    border: 1px solid var(--color-fonte); 
+    padding: 1px;
+    
 }
 
-
+/*----------------------- final menu projeto ---------------------------*/
+/*------------------------ menu sobre mim -----------------------*/
+/*------------------------ Final menu sobre mim -----------------------*/
