--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ p{
     box-shadow: 0 0 20px 2px var(--white-alpha-25);
     z-index: 1000;
     overflow: hidden;
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(2, 1fr);
 
 }
@@ -356,3 +356,29 @@ textarea .input{
 }
 
 /*------------------------ Final contatos -----------------------*/
+
+/*------------------------ Informations -----------------------*/
+.contact-info{
+    
+    padding: 2.3rem ;
+    position: relative;
+}
+
+.titulo-redes-sociais{
+    margin-top: 0;
+    margin-bottom: 25px;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+.icon {
+    color: rgba(250, 247, 252, 0.363);
+    display: flex;
+    flex-direction: column;
+    width: 50px;
+}
+.information{
+    display: flex;
+}
+
+/*----------------------- Final Informations -----------------------*/
