--- a/style.css
+++ b/style.css
@@ -189,53 +189,50 @@ p{
     
 }
 
-/*------------------------ menu sobre mim -----------------------*/
-.sobreMim{
-    
-    max-width: 100%;
-    height: 700px;
-    padding: 20px 80px 40px 80px;
-    font-family: 'Poppins' ;
-    margin-top: 30px;
-}
 
-.titulo{
-    color: var(--color-fonte-menu);
-}
-/*------------------------ Final menu sobre mim -----------------------*/
 /*------------------------ menu projeto -----------------------*/
 .projetos{
-
-    margin: 50px 10px 10px 10px;
-    max-width: 100%;
-    max-height: 100%;
+    background-color: bisque;
+    min-height: 90vh;
     display: flex;
+    align-content: flex-start;
     justify-content: space-evenly;
-    flex-wrap: wrap;
     
 }
-
-.barberShop, .curriculo, 
-.fichaCadastro, .projetoMenu, .toDoList{
-    
+.card{
+    width: 200px;
+    height: 230px;
+    margin: 10px 15px;
+    margin-top: 30px;
+    padding: 15px 25px;
+    box-sizing: border-box;
+    cursor: pointer;
+    background-position: center;
+    background-size: cover;
+    transition: transform 0.5s;
+    border-radius: 25px;
     border: 1px solid var(--color-border);
-    width: 100px;
-    height: 150px;
-    margin-top: 15px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    
- 
 }
-.img-projetos{
-    background-color: rgb(7, 7, 7);
-    width: 100px;
-    height: 150px;
-    border: 1px solid var(--color-fonte); 
-    padding: 1px;
-    
+.card:hover{
+    transform: translateY(30px);
+}
+.card1{
+    background-image: url(./babershop.jpg);
+}
+.card2{
+    background-image: url(./cv.png);
+}
+.card3{
+    background-image: url(./ficha.png);
+}
+.card4{
+    background-image: url(./menu.png);
+}
+.card5{
+    background-image: url(./lista.png);
+}
+.card6{
+    background-image: url(./sahara.png);
 }
 
 /*----------------------- final menu projeto ---------------------------*/
