--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 /*---------------------------------VARIABLES--------------------------------*/
 :ROOT{
     --color-fonte-menu: rgb(255, 255, 255);
-    --color-fonte: rgb(210, 208, 211);
-    --cyan-light: #170324;
-    --pink-light: #6d5d45fb;
+    --color-fonte: rgb(62, 62, 65);
+    --cyan-light: #095b74f8;
+    --pink-light: #8cebdbf6;
     --green-yellow: rgb(10, 2, 2);
     --white-alpha-40: rgba(231, 228, 227, 0.336);
     --white-alpha-25: rgba(252, 250, 249, 0.322);
@@ -93,9 +93,7 @@ section{ /* Quadrado central */
     list-style: none;
     flex-wrap: wrap;
     margin-right: 50px;
-    
-    
-
+    font-weight: 500;
 }
 .nav-links, li{
     padding: 0px 20px;
@@ -106,6 +104,7 @@ section{ /* Quadrado central */
 }
 .nav-links li a:hover {
     color: var(--color-fonte-menu);
+    border-bottom: 1px solid var(--color-fonte);
 }
 
 li, a{
@@ -158,7 +157,7 @@ img{
     border: 2px solid var(--white-alpha-25);
     
 }
-/*--------------------------------testo-------------------------------*/
+/*--------------------------------texto-------------------------------*/
 .texto{
  /*   background-color: blue;*/
     width: 800px;
@@ -179,8 +178,12 @@ h1{
 .nome span:first-child{
     color: var(--color-fonte-menu);
     font-family: 'Lobster', cursive;
-    font-size: 30px;
+    font-size: 28px;
     letter-spacing: 6px;
+    cursor: pointer;
+}
+.nome span:first-child:hover{
+    border-bottom: 1px solid var(--color-fonte);
 }
 p{
     margin-top: 10px;
@@ -191,6 +194,8 @@ p{
 
 
 /*------------------------ menu projeto -----------------------*/
+
+
 .projetos{
     max-width: 1200px;
     display: flex;
@@ -198,11 +203,13 @@ p{
     flex-wrap: wrap;
     box-sizing: border-box;
     align-items: center;
+    font-size: 20px;
+    
 }
 .card{
-    width: 200px;
-    height: 230px;
-    margin: 10px 20px;
+    width: 160px;
+    height: 180px;
+    margin: 10px 15px;
     margin-top: 40px;
     padding: 15px 25px;
     box-sizing: border-box;
@@ -211,7 +218,10 @@ p{
     background-size: cover;
     transition: transform 0.5s;
     border-radius: 25px;
-        
+    display: flex;
+    justify-content: center;
+    padding-top: 5px;
+    
 }
 .card:hover{
     transform: translateY(25px);
@@ -235,18 +245,45 @@ p{
     background-image: url(./sahara.png);
 }
 .link-projetos{
-    
-  
+    font-size: 20px;
     color: #170324;
 }
-
-#link{
-    padding: 10px;
-    border: 1px solid black;
-    font-size: 16px;
-    border-radius: 21px;
-    background-color: rgb(206, 197, 197);
-    
+/* titulos dos cards*/
+.link{
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    border: 1px solid gba(125, 110, 139, 0.247);
+    background-color: rgba(110, 130, 139, 0.418);
+    width: 110px;
+    height: 30px;
+    border-radius: 10px;
+    align-items: center;
+    color: var(--color-fonte);
+    font-weight: 500;
+    box-shadow: 0 0 4px 2px rgb(243, 233, 247);
+}
+.link:hover{
+    background-color: rgb(211, 207, 214);
+    color: #170324;
 }
 /*----------------------- final menu projeto ---------------------------*/
 /*------------------------ Contatos -----------------------*/
+.contatos{
+    
+    height:75vh;
+    background-color: antiquewhite;
+    position: fixed;
+}
+form{
+    background-color: rgba(199, 122, 122, 0.418);
+    
+    
+  
+}
+.formulario{
+    width: 100%;
+    height: 70vh;
+    background-color: aquamarine;
+
+}
