--- a/style.css
+++ b/style.css
@@ -270,20 +270,61 @@ p{
 /*----------------------- final menu projeto ---------------------------*/
 /*------------------------ Contatos -----------------------*/
 .contatos{
-    
-    height:75vh;
-    background-color: antiquewhite;
-    position: fixed;
-}
-form{
-    background-color: rgba(199, 122, 122, 0.418);
-    
-    
-  
-}
-.formulario{
+    background-color: rgb(211, 141, 36);
+    font-family: 'Poppins', sans-serif; 
+    box-sizing: border-box;
     width: 100%;
-    height: 70vh;
+    height: 75vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: -80px;
+}
+.contatos h1{
     background-color: aquamarine;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+    color: var(--color-fonte);
+}
 
+.formulario{
+    background-color: azure;
+    display: flex;
+    flex-direction: column;
+    
+}
+label{
+    padding: 10px;
+    margin-left: 10px;
+}
+input{
+    width: 200px;
+    height: 25px;
+    margin-left: 20px;
+    border-radius: 10px;
+}
+textarea{
+    padding: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.center{
+    background-color: yellowgreen;
+    margin-top: 20px;
+    text-align: center;
+}
+.midia{
+    background-color: rgb(247, 45, 9);
+    display: flex;
+    justify-content: space-around;
+    height: 30px;
+    margin-top: 10px;
+}
+
+.social{
+    text-align: center;
+    background-color: rgba(219, 20, 163, 0.767);
+    margin-top: 30px;
+    font-size: 16px;
 }
