--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ p{
 /*----------------------- final menu projeto ---------------------------*/
 /*------------------------ Contatos -----------------------*/
 .contatos{
-    background-color: rgb(211, 141, 36);
+    
     font-family: 'Poppins', sans-serif; 
     box-sizing: border-box;
     width: 100%;
@@ -278,10 +278,9 @@ p{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: -80px;
+    margin-top: -50px;
 }
 .contatos h1{
-    background-color: aquamarine;
     text-align: center;
     text-transform: uppercase;
     font-size: 16px;
@@ -289,7 +288,7 @@ p{
 }
 
 .formulario{
-    background-color: azure;
+    
     display: flex;
     flex-direction: column;
     
@@ -299,32 +298,55 @@ label{
     margin-left: 10px;
 }
 input{
-    width: 200px;
+    width: 490px;
     height: 25px;
     margin-left: 20px;
+    margin-right: 20px;
     border-radius: 10px;
+    border: 1px solid var(--color-border);
+    background-color: var(--color-fonte-menu);
+    font-family: 'Poppins', sans-serif; 
+    padding-left: 10px;
+    font-size: 15px;
+    cursor: pointer;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.137);
 }
 textarea{
     padding: 10px;
     margin-left: 20px;
     margin-right: 20px;
+    border: 1px solid var(--color-border);
+    border-radius: 10px;
+    background-color: var(--color-fonte-menu);
+    font-family: 'Poppins', sans-serif; 
+    cursor: pointer;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.137);
 }
 .center{
-    background-color: yellowgreen;
+    font-family: 'Poppins', sans-serif; 
     margin-top: 20px;
     text-align: center;
+    font-weight: 300;
+    font-size: 18px;
+}
+.center:hover{
+    
+}
+.btn:hover{
+    font-size: 15px;
+    background-color: rgb(180, 252, 195);
 }
 .midia{
-    background-color: rgb(247, 45, 9);
     display: flex;
     justify-content: space-around;
     height: 30px;
     margin-top: 10px;
 }
 
+
+
 .social{
     text-align: center;
-    background-color: rgba(219, 20, 163, 0.767);
     margin-top: 30px;
     font-size: 16px;
 }
