--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ input{
     margin-right: 20px;
     border-radius: 10px;
     border: 1px solid var(--color-border);
-    background-color: var(--color-fonte-menu);
+    background-color: rgba(231, 252, 250, 0.822);
     font-family: 'Poppins', sans-serif; 
     padding-left: 10px;
     font-size: 15px;
@@ -317,7 +317,7 @@ textarea{
     margin-right: 20px;
     border: 1px solid var(--color-border);
     border-radius: 10px;
-    background-color: var(--color-fonte-menu);
+    background-color: rgba(231, 252, 250, 0.822);
     font-family: 'Poppins', sans-serif; 
     cursor: pointer;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.137);
