--- a/ProjetoMenu/css/style.css
+++ b/ProjetoMenu/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 .header {
     display: flex; /*deixar lado a lado*/
-    justify-content: space-between;/*deiar um espaço entre eles, h1 e a li*/
+    justify-content: space-between;/*deixar um espaço entre eles, h1 e a li*/
     align-items: center; /*alinha o texto no centro na vertical*/
     width: 100%;
     height: 50px;
