--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body, a{
     color: var(--text-color);
     text-decoration: none;
     transition: .4s;
-    background-color: black;
+    
 }
 .container{
     max-width: 1170px;
@@ -123,7 +123,6 @@ body, a{
 
 
 .ability{ 
-    max-width: 1170px;
     height: 100vh;
     display: flex;
     justify-content: space-around;
@@ -132,18 +131,18 @@ body, a{
     border-radius: 10px;
     background: #1a2a6c;
     background: -webkit-linear-gradient(to right, #0c040e, #100113, #1a2a6c);
-    background: linear-gradient(to right, #20012770, #b3b1b4, #20012770); 
+    background: linear-gradient(to right, #2001273f, #877192, #20012738); 
     margin-top: 10px;
+    
 }
 .ability-estudos{
     width: 500px;
-    height: 730px;
+    height: 600px;
     border: 2px solid var(--color-border);
     border-radius: 10px;
-    
+    cursor: pointer;
 }
 .ability-estudos-title{
-    
     font-size: 25px;
     margin-bottom: 25px;
     margin-top: 35px;
@@ -158,7 +157,7 @@ body, a{
 .skill-completa {
     width: 110px;
     height: 130px;
-    margin: 15px;
+    margin: 20px;
     border: 1px solid var(--color-border);
     border-radius: 10px;
     text-align: center;
@@ -172,10 +171,12 @@ body, a{
 
 .ability-estudando{
     width: 500px;
-    height: 730px;
+    height: 600px;
     border: 2px solid var(--color-border);
     border-radius: 10px;
+    cursor: pointer;
 }
+
 .ability-estudando-skill{
     display: flex;
     justify-content: space-between;
@@ -184,59 +185,60 @@ body, a{
 .skill-incompleta{
     width: 120px;
     height: 150px;
-    margin: 15px;
+    margin: 20px;
 }
 
 /*---------------PROJETOS---------------*/
 
 .projetos{
     height: 100vh;
+    margin-top: 50px;
     display: flex;
+    flex-direction: column;
+    text-align: center;
+    
+}
+.box{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
     justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    border-radius: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
-
-.projetos-card{
-    max-width: 1100px;
-    height: 730px;
+.card{
+    background-image: url(./Logo.png);
+    width: 200px;
+    height: 300px;
     border: 2px solid var(--color-border);
+    margin-top: 30px;
     border-radius: 10px;
+    padding-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
     display: flex;
-            
-}
-.projetos-card {
-    display: flex;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
-    justify-content: center;
 }
-.projetos-card .cards{
-    margin: 15px;
-    border: 1px solid var(--color-border);
-    border-radius: 10px;
-    text-align: center;
-    padding: 10px;
-    box-shadow: 0 0 5px var(--color-primary);
-    background-color: #777;
-    margin-top: 100px;
-}
-.cards{
-    width: 120px;
-    height: 180px;
-    background-color: #777;
 
+
+.btn{
+    width: 130px;
+    height: 30px;
+    background: #000000;
+    background: -webkit-linear-gradient(to right, #434343, #000000);
+    background: linear-gradient(to right, #735f79, #1c0129); 
+    border-radius: 8px;
+    border: 1px solid var(--color-border);
 }
 /*--------------CONTATOS----------------*/
 
 .contatos{
     max-width: 1170px;
     height: 100vh;
-    background-color: #fff;
- 
+    background-color: rgb(241, 214, 214);
+ margin-bottom: 10px;
 }
+
 
 /*------------FOOTER--------*/
 
