--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,6 @@ body, a{
 }
 
 .contatos{
-    
     display: flex;
     justify-content: center;
     max-width: 1170px;
@@ -261,19 +260,35 @@ body, a{
     padding-top: 10px;
 }
 input{
-    width: 400px;
-    height: 20px;
+    width: 100%;
+    height: 25px;
+    margin-top: 5px;
+    background-color: red;
+}
+label{
+    background-color: green;
+    width: 100%;
+    height: 15px;
+    margin-top: 5px;
+}
+textarea{
+    background-color: blue;
+    margin-top: 5px
+
 }
 .dados {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    background-color: #1a2a6c52;
     width: 500px;
-    height: 600px;
-    justify-content: space-around;
-    
+    height: 500px;
+    margin: 0 auto;
 }
 .social-midia{
-
+    background-color: #735f793f;
     width: 500px;
-    height: 600px;
+    height: 500px;
       
 }
 .btn{
@@ -281,7 +296,7 @@ input{
     height: 30px;
     background: #000000;
     background: -webkit-linear-gradient(to right, #434343, #000000);
-    background: linear-gradient(to right, #735f79, #1c0129); 
+    background: linear-gradient(to right, #d8c4df, #1c0129); 
     border-radius: 8px;
     border: 1px solid var(--color-border);
 }
